--- a/circle.yml
+++ b/circle.yml
@@ -46,9 +46,9 @@ dependencies:
 
   override:
     - cd ${HOME} && meteor create --release METEOR@1.3.1 helloworld
-    - cd ${HOME}/helloworld
-    - cd ${HOME}/helloworld && ls -la
-    - cd ${HOME}/helloworld && rm helloworld.*
+    #- cd ${HOME}/helloworld/client
+    #- cd ${HOME}/helloworld/client && ls -la
+    #- cd ${HOME}/helloworld/client && rm main.*
     - cd ${HOME}/helloworld && mkdir packages && mkdir packages/active-users
     - cp -R * ${HOME}/helloworld/packages/active-users
     - cd ${HOME}/helloworld && meteor add anti:gagarin@0.4.11 accounts-base accounts-password session meteor-platform clinical:user-model clinical:active-entry clinical:active-users
